force-app/main/default/objects/Proposal__c/fields/Proposal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Amount__c</fullName>
    <label>Proposal Amount</label>
    <summarizedField>Equipment_Set__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Equipment_Set__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>