force-app/main/default/objects/Proposal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>