force-app/main/default/objects/Proposal__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <description>The total quantity of all equipment.</description>
    <label>Total Quantity</label>
    <summarizedField>Equipment_Set__c.Quantity__c</summarizedField>
    <summaryForeignKey>Equipment_Set__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>